--- a/frontend/fluxcms-theme/css/ajax.css
+++ b/frontend/fluxcms-theme/css/ajax.css
@@ -747,3 +747,29 @@ p {
     color: #FFFFFF;
 }
 
+div.auto_complete {
+    width: 350px;
+    background: #E0E0E0;
+    color:#444444;
+    border:2px solid #444444;
+}
+div.auto_complete ul {
+    /*border:1px solid #888;*/
+    margin:0;
+    padding:0;
+    width:100%;
+    list-style-type:none;
+}
+div.auto_complete ul li {
+    margin:0;
+    padding:3px;
+}
+div.auto_complete ul li.selected { 
+    background-color: red; 
+    color: #FFFFFF;
+}
+div.auto_complete ul strong.highlight { 
+    color: #000000; 
+    margin:0;
+    padding:0;
+}
