--- a/frontend/fluxcms-theme/css/main.css
+++ b/frontend/fluxcms-theme/css/main.css
@@ -29,7 +29,7 @@ dd.info {
 }
 
 body{
-    font-family:Geneva, Arial, Helvetica, sans-serif;
+	font-family:Geneva, Arial, Helvetica, sans-serif;
     font-size:11px;
     margin:0px;
     color:#444444;
@@ -129,11 +129,14 @@ a:hover {
 
 .post_content{
 	line-height:20px;
+	margin:0px;
+	margin-bottom:15px;
+	width:515px;
 }
 
 .post_meta_data{
 	margin:0px;
-	margin-bottom:10px;
+	margin-bottom:13px;
 	margin-top:7px;
 	padding:0px;
 	padding-bottom:10px;
@@ -208,4 +211,37 @@ p {
     margin-bottom:10px;
     padding-bottom:10px;
 /*    border-bottom: 1px dotted #444444;*/
+}
+
+.addcomment{
+margin:0px;
+margin-top:30px;
+}
+
+.formurl{
+display:none;
+}
+
+.formcheckbox{
+margin:0px;
+margin-top:25px;
+}
+
+.formbutton{
+margin:0px;
+margin-top:15px;
+background-color: white; 
+border-color:#999999;
+border-style:solid;
+border-width:1px;
+color: black; 
+font-family: arial, verdana, ms sans serif;
+font-size: 8pt;
+cursor:pointer;
+}
+
+.listcomments{
+margin:0px;
+margin-top:25px;
+margin-bottom:10px;
 }
